--- a/pages/index.css
+++ b/pages/index.css
@@ -3,6 +3,8 @@
 
 @import url(../blocks/page/page.css);
 
+@import url(../blocks/content/__section-center/content__section-center.css);
+
 @import url(../blocks/header/header.css);
 @import url(../blocks/header/__logo/header__logo.css);
 @import url(../blocks/header/__lang-link/header__lang-link.css);
@@ -14,6 +16,7 @@
 @import url(../blocks/lead/__image/lead__image.css);
 @import url(../blocks/lead/__title/lead__title.css);
 @import url(../blocks/lead/__subtitle/lead__subtitile.css);
+@import url(../blocks/lead/__picture/lead__picture.css);
 
 @import url(../blocks/intro/intro.css);
 @import url(../blocks/intro/__title/intro__title.css);
