--- a/blocks/cover/__background/cover__background.css
+++ b/blocks/cover/__background/cover__background.css
@@ -5,7 +5,7 @@
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
-    margin: 92px auto 0 auto;
+    margin-top: 92px;
     align-items: center;
     justify-content: center;
     text-decoration: none;
